--- a/ulib/Makefile
+++ b/ulib/Makefile
@@ -1,15 +1,20 @@
 .PHONY: indent
 
 FSTAR_HOME=..
+include $(FSTAR_HOME)/src/gmake/z3.mk
 include $(FSTAR_HOME)/src/gmake/fstar.mk
 
-FLAKY=FStar.Int31.fst FStar.UInt31.fst FStar.Relational.State.fst
+FLAKY=FStar.Int31.fst FStar.UInt31.fst FStar.Relational.State.fst FStar.StructNG.fst
 
 ALL=$(filter-out $(FLAKY) ,$(wildcard FStar.*.fst FStar.*.fsti))
 
 all: $(addsuffix -ver, $(ALL))
 
 indent: $(addsuffix -indent, $(ALL))
+
+%-ver: %
+	$(FSTAR) $^
+	touch $@
 
 %.fst-indent: %.fst
 	$(FSTAR) --indent $^ > $^.indent.fst
@@ -20,9 +25,6 @@ indent: $(addsuffix -indent, $(ALL))
 verify-indent: $(addsuffix -verindent, $(wildcard *.indent.fst))
 
 %-verindent: %
-	$(FSTAR) $^
-
-%-ver: %
 	$(FSTAR) $^
 
 wc:
