Alternative and tweaks

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ cache/
 /lib/FStar.GetOpt.fsti
 /lib/FStar.Unionfind.fsti
 
+/ulib/.mgen
 /ulib/ml/extracted
 
 /bin/*.dll
@@ -57,6 +58,7 @@ dump
 *.cmi
 *.cmo
 *.cmx
+*.cma
 *.o
 
 .depend
