--- a/ulib/ml/Makefile
+++ b/ulib/ml/Makefile
@@ -1,4 +1,4 @@
-FSTAR_HOME=../..
+FSTAR_HOME=?../..
 include $(FSTAR_HOME)/src/gmake/z3.mk
 include $(FSTAR_HOME)/src/gmake/fstar.mk
 
@@ -13,7 +13,7 @@ OCAMLBUILD=cd ../../ && ocamlbuild -use-ocamlfind -I ulib/ml -I ulib/ml/$(ULIB_G
 
 .PHONY:clean
 
-all: .mgen fstarlib.cmxa
+all: .mgen install
 
 fstarlib.mllib: .mgen *.ml $(wildcard extracted/*.ml)
 	$(FIND) . extracted -maxdepth 1 -name "*.ml" -printf '%f\n' \
@@ -22,28 +22,21 @@ fstarlib.mllib: .mgen *.ml $(wildcard extracted/*.ml)
 
 FSTARLIB_DIR=../../bin/fstarlib/
 
-fstarlib.cmxa:fstarlib.mllib
-	$(OCAMLBUILD) fstarlib.cmxa
-	make install
+fstarlib.cmxa fstarlib.cma:fstarlib.mllib | fstarlib.cma
+	$(OCAMLBUILD) $@
+	cp _build/ulib/ml/$@ $(FSTARLIB_DIR)
 
-fstarlib.cma:fstarlib.mllib
-	$(OCAMLBUILD) fstarlib.cma
-	make install
-
-install:
-	cp _build/ulib/ml/fstarlib.cmxa $(FSTARLIB_DIR)
-	cp _build/ulib/ml/fstarlib.cma $(FSTARLIB_DIR)
-	cp _build/ulib/ml/fstarlib.a $(FSTARLIB_DIR) 
+install: fstarlib.cmxa fstarlib.cma
 	cp _build/ulib/ml/*.cmi $(FSTARLIB_DIR)
 	cp _build/ulib/ml/extracted/*.cmi $(FSTARLIB_DIR)
 
 .mgen:
-	make -C .. .mgen
+	$(MAKE) -C .. .mgen
 
 
 # Common rules
 clean:
-	rm -f fstarlib.mllib || :
+	rm -f fstarlib.mllib
 	rm -f $(ULIB_GEN_DIR)/*
-	rm -f ../.mgen || :
+	rm -f ../.mgen
 	rm -rf _build # ← ocamlbuild -clean does not work on Cygwin
