--- a/ulib/ml/Makefile.include
+++ b/ulib/ml/Makefile.include
@@ -8,7 +8,7 @@ FSTAR_REALIZED_MODULES=All BaseTypes Buffer Char CommonST Constructive Float Gho
 	List List.Tot.Base Mul Option Pervasives.Native Set ST String \
 	UInt128 UInt16 UInt32 UInt63 UInt64 UInt8 \
 	Pointer BufferNG Reflection.Types Tactics.Builtins \
-	Tactics.Types Bytes \
+	Tactics.Types Bytes Util \
 	# prims is realized by default hence not included in this list
 
 NOEXTRACT_MODULES=$(addprefix FStar., $(FSTAR_REALIZED_MODULES)) prims
