--- a/ulib/ml/Makefile.include
+++ b/ulib/ml/Makefile.include
@@ -6,7 +6,7 @@
 FSTAR_REALIZED_MODULES=All BaseTypes Buffer Char CommonST Constructive Float Ghost Heap \
 	HyperStack.All HyperStack.ST Int16 Int32 Int63 Int64 Int8 Int_Cast IO \
 	List List.Tot.Base Mul Option Pervasives.Native Set ST String \
-	UInt128 UInt16 UInt32 UInt63 UInt64 UInt8 \
+	UInt16 UInt32 UInt63 UInt64 UInt8 \
   Pointer BufferNG
 	# prims is realized by default hence not included in this list
 
