--- a/examples/micro-benchmarks/Makefile
+++ b/examples/micro-benchmarks/Makefile
@@ -23,7 +23,7 @@ uall: all-pos all-neg
 
 all-pos: Unit1.Basic.uver Unit1.Projectors2.uver Unit1.WPsAndTriples.uver Unit1.Parser.uver \
 	 Unit1.RefinementInference.uver Unit1.WPsAndTriples_ST.uver Unit1.Projectors1.uver \
-	 Unit1.UnificationTests.uver Unit1.RecursiveTypeFunctions.uver \
+	 Unit1.UnificationTests.uver Unit1.RecursiveTypeFunctions.uver Unit1.TopLevelPats.uver \
 	 Unit2.uver TestSet.uver TestHeap.uver ShortCircuit.uver FirstProofs.uver TestMRef.uver \
 	 TestTwoLevelHeap.uver Mac.uver TestGhost.uver Normalization.uver Positivity.uver DoNotation.fst \
 	 Pruning.fst NormVsSMT.fst
