opened universes and removed instantiations

--- a/src/Makefile
+++ b/src/Makefile
@@ -228,7 +228,7 @@ u_extract_all: u_extract_tactics u_extract_reflection u_extract_misc u_extract_s
 
 uz:
 	$(MAKE) prep
-	+$(MAKE) u_extract_uz
+	+$(MAKE) u_extract_syntax
 	cp u_ocaml-output/*.ml ocaml-output/
 	+$(MAKE) -C ocaml-output
 
