Separate DDCC away from more general rules
Some rules of DDCC are actually logic-agnostic,
in particular because they do not depend on the
fact that the logical formulae or types should be
PERs or interpolable.

--- a/examples/rel/Makefile
+++ b/examples/rel/Makefile
@@ -7,7 +7,8 @@ uall: all
 
 all:\
   Benton2004.uver\
-  Benton2004.Examples.uver\
+  Benton2004.DDCC.uver\
+  Benton2004.DDCC.Examples.uver\
   Benton2004.SmithVolpano.uver\
   Bijection.uver\
   Equivalence.uver\
