Benton 2004 relational Hoare logic (except r_while)

--- a/examples/rel/Makefile
+++ b/examples/rel/Makefile
@@ -10,6 +10,7 @@ all:\
   Benton2004.DDCC.uver\
   Benton2004.DDCC.Examples.uver\
   Benton2004.SmithVolpano.uver\
+  Benton2004.RHL.uver\
   Bijection.uver\
   Equivalence.uver\
   IfcComposeReify.uver\
