--- a/examples/rel/Makefile
+++ b/examples/rel/Makefile
@@ -5,12 +5,10 @@ include ../Makefile.include
 
 uall: all
 
+.PHONY: benton2004
+
 all:\
-  Benton2004.uver\
-  Benton2004.DDCC.uver\
-  Benton2004.DDCC.Examples.uver\
-  Benton2004.SmithVolpano.uver\
-  Benton2004.RHL.uver\
+  benton2004\
   Bijection.uver\
   Equivalence.uver\
   IfcComposeReify.uver\
@@ -48,6 +46,16 @@ all:\
   WhileReify.uver \
   OTP.uver \
   ElGamal.uver
+
+
+benton2004:\
+  Benton2004.uver\
+  Benton2004.DDCC.uver\
+  Benton2004.DDCC.Examples.uver\
+  Benton2004.SmithVolpano.uver\
+  Benton2004.RHL.uver\
+  Benton2004.RHL.Examples.uver\
+
 
 %.fst-in:
 	@echo $(OTHERFLAGS)
