pure variant of dynamic ifc

--- a/examples/rel/Makefile
+++ b/examples/rel/Makefile
@@ -8,6 +8,7 @@ uall: all
 all:\
   Bijection.uver\
   Equivalence.uver\
+	DynamicIFC2_pure.uver\
   IfcComposeReify.uver\
   IfcDeclassify.uver\
   IfcDelimitedRelease.uver\
