--- a/examples/rel/Makefile
+++ b/examples/rel/Makefile
@@ -5,7 +5,7 @@ include ../Makefile.include
 
 uall: all
 
-.PHONY: benton2004
+.PHONY: benton2004 uall all benton2004 test pack clean
 
 all:\
   benton2004\
@@ -79,19 +79,35 @@ pack:
 FIND=$(shell which gfind > /dev/null 2>&1 && echo gfind || echo find)
 SED=$(shell which gsed > /dev/null 2>&1 && echo gsed || echo sed)
 
-timings.csv:
+results_without_hints:
 	+HINTS_ENABLED='' OTHERFLAGS='--record_hints' make -k all > results_without_hints || :
+
+results_with_hints:
 	+make -k all > results_with_hints || :
+
+timings_without_hints.csv: results_without_hints
 	$(SED) -n results_without_hints -e '/Verified/s/.*: \([^ ]*\) (\([0-9]*\) .*/\1,\2/p' \
-		| sort -t , -k 2,1 > timings_without_hints.csv
+		| sort -t , -k 1,1 > timings_without_hints.csv
+
+timings_with_hints.csv: results_with_hints
 	$(SED) -n results_with_hints -e '/Verified/s/.*: \([^ ]*\) (\([0-9]*\) .*/\1,\2/p' \
-		| sort -t , -k 2,1 > timings_with_hints.csv
+		| sort -t , -k 1,1 > timings_with_hints.csv
+
+loc.csv:
 	$(FIND) . -name '*fst' \
 		-exec sh -c 'sed -n -e "/^\((\*.*\*)\| \|\/\/.*\)*$$/!p" {} | wc -l ' \; \
 		-print | tr '\n' ' ' \
 		| sed -e 's; \.\/;,;g' -e 's;\.fst ;\n;g' \
 		| sort -t , -k 2,2 > loc.csv
+
+timings0.csv: timings_without_hints.csv timings_with_hints.csv
 	join -t , -1 1 -2 1 timings_without_hints.csv timings_with_hints.csv > timings0.csv
+
+timings.csv: timings0.csv loc.csv
 	echo 'filename,timings (no hints),timings (with hints),loc' > timings.csv
 	join -t , -1 1 -2 2 timings0.csv loc.csv >> timings.csv
 	#rm results_without_hints results_with_hints timings_without_hints.csv timings_with_hints.csv loc.csv timings0.csv
+
+
+clean:
+	rm -f results_without_hints results_with_hints timings_without_hints.csv timings_with_hints.csv loc.csv timings0.csv timings.csv
