forgot to add IfcMonitor to Makefile

--- a/examples/rel/Makefile
+++ b/examples/rel/Makefile
@@ -20,6 +20,8 @@ all:\
   IfcExampleReify1.uver\
   IfcExampleReify2.uver\
   IfcExampleReify3.uver\
+  IfcMonitor.uver\
+  IfcMonitorTest.uver\
   IfcRecursiveHeapReify.uver\
   IfcRecursiveReify.uver\
   IfcReificationRegressionTest.uver\
