--- a/src/Makefile
+++ b/src/Makefile
@@ -190,9 +190,6 @@ u_extract_tcterm: u_boot_fsts/FStar.TypeChecker.TcTerm.fst
 u_extract_tcinductive: u_boot_fsts/FStar.TypeChecker.TcInductive.fst
 	$(FSTARBOOT) $^ --extract_module FStar.TypeChecker.TcInductive
 
-u_extract_tcenv: u_boot_fsts/FStar.TypeChecker.Env.fst
-	$(FSTARBOOT) $^ --extract_module FStar.TypeChecker.Env
-
 u_extract_tc: u_boot_fsts/FStar.TypeChecker.Tc.fst
 	$(FSTARBOOT) $^ --extract_module FStar.TypeChecker.Tc
 
@@ -267,8 +264,7 @@ ifeq ($(OS),Windows_NT)
 endif
 	+$(MAKE) -C ocaml-output
 	+$(MAKE) fstar-ocaml
-	+$(MAKE) -C ../examples/hello ocaml #a basic regression test for extraction
-	+$(MAKE) uregressions interactive-test
+	+$(MAKE) uregressions
 
 # Interactive mode regressions
 interactive-test:
@@ -278,8 +274,12 @@ interactive-test:
 fsharp-regressions:
 	$(RUNTIME) $(BIN)/tests.exe
 
+#a basic regression test for extraction
+hello:
+	+$(MAKE) -C ../examples/hello ocaml
+
 # Getting parallelism from this target
-uregressions: ulib uexamples
+uregressions: hello ulib uexamples interactive-test
 
 ulib:
 	+$(MAKE) -C ../ulib
