--- a/src/ocaml-output/Makefile
+++ b/src/ocaml-output/Makefile
@@ -7,7 +7,7 @@ endif
 
 MENHIR=menhir #--explain --infer -la 1 --table
 OCAMLLEX=ocamllex
-OCAMLBUILD=cd ../../ && ocamlbuild -cflag '-g' -I src/ocaml-output -I src/basic/ml \
+OCAMLBUILD=cd ../../ && ocamlbuild -tag debug -cflag '-g' -I src/ocaml-output -I src/basic/ml \
   -I src/parser/ml -I src/fstar/ml -I src/extraction/ml -j 24 -build-dir src/ocaml-output/_build \
   -I src/tactics/ml -I src/prettyprint/ml  -I ulib/ml -use-ocamlfind
 COMPILER_ML_LIB=FStar_Util.cmx FStar_Bytes.cmx FStar_Getopt.cmx FStar_Range.cmx FStar_Platform.cmx FStar_Unionfind.cmx
@@ -98,9 +98,9 @@ endif
 	                    >> $@
 
 fstar.exe: $(GENERATED_FILES)
-	$(OCAMLBUILD) main.native
-	cp _build/src/fstar/ml/main.native ../../bin/$@
-	cp _build/src/fstar/ml/main.native ../../bin/fstar.ocaml
+	$(OCAMLBUILD) main.byte
+	cp _build/src/fstar/ml/main.byte ../../bin/$@
+	cp _build/src/fstar/ml/main.byte ../../bin/fstar.ocaml
 
 FStar_Parser_Parse.ml: parse.mly
 	# We are opening the same module twice but we need these modules
@@ -171,7 +171,7 @@ install_dir = cd ../../$(1) && find . -type f -exec $(INSTALL_EXEC) -m 644 -D {}
 # Install FStar into $(PREFIX) using the standard Unix directory structure.
 install: all
         # Install the binary
-	$(INSTALL_EXEC) -m 755 -D -T _build/src/fstar/ml/main.native $(PREFIX)/bin/fstar.exe
+	$(INSTALL_EXEC) -m 755 -D -T _build/src/fstar/ml/main.byte $(PREFIX)/bin/fstar.exe
         # Then the rest of the static files.
 	$(call install_dir,ulib,lib/fstar)
 	$(call install_dir,examples,share/fstar/examples)
@@ -197,7 +197,7 @@ package: all
 	if [ -d "$(PREFIX)" ]; then rm -dfr fstar; fi
         # Install the F* binary
 	mkdir -p $(PREFIX)/bin/
-	$(INSTALL_EXEC) -m 755 _build/src/fstar/ml/main.native $(PREFIX)/bin/fstar.exe
+	$(INSTALL_EXEC) -m 755 _build/src/fstar/ml/main.byte $(PREFIX)/bin/fstar.exe
         # Then the rest of the static files.
 	$(call fexport,ulib)
 	$(call fexport,examples)
