Makefile: fix dependencies
A part of uexamples (tutorial) depended on ulib.
Make the dependency explicit for a more robust build.

--- a/src/Makefile
+++ b/src/Makefile
@@ -279,10 +279,13 @@ hello:
 	+$(MAKE) -C ../examples/hello ocaml
 
 # Getting parallelism from this target
-uregressions: hello ulib uexamples interactive-test
+uregressions: hello ulib tutorial uexamples interactive-test
 
 ulib:
 	+$(MAKE) -C ../ulib
+
+tutorial: ulib
+	+$(MAKE) -C ../doc/tutorial regressions
 
 uexamples:
 	+$(MAKE) -C ../examples all
