--- a/ulib/ml/Makefile
+++ b/ulib/ml/Makefile
@@ -9,17 +9,27 @@ ULIB_GEN_DIR=extracted
 
 FIND=$(shell which gfind > /dev/null 2>&1 && echo gfind || echo find)
 SED=$(shell which gsed > /dev/null 2>&1 && echo gsed || echo sed)
-OCAMLBUILD=cd ../../ && ocamlbuild -use-ocamlfind -I src/basic/ml -I src/ocaml-output -I src/prettyprint/ml -I ulib/ml -I ulib/ml/$(ULIB_GEN_DIR) -build-dir ulib/ml/_build
+OCAMLBUILD=cd ../../ && ocamlbuild -use-ocamlfind -I ulib/ml -I ulib/ml/$(ULIB_GEN_DIR) -build-dir ulib/ml/_build
 
 .PHONY:clean
 
 all: .mgen install
 
 fstarlib.mllib: .mgen *.ml $(wildcard extracted/*.ml)
-	cp ../../src/ocaml-output/FStar_Pervasives.ml .
+	cp ../../src/ocaml-output/*.ml extracted/
+	cp ../../src/basic/ml/*.ml extracted/
+	cp ../../src/prettyprint/ml/*.ml extracted/
+	cp ../../src/extraction/ml/FStar_Extraction_ML_PrintML.ml extracted/
+	cp ../../src/parser/ml/FStar_Parser_LexFStar.mll extracted/
+	cp ../../src/parser/ml/FStar_Parser_ParseIt.ml   extracted/
+	cp ../../src/parser/ml/FStar_Parser_Util.ml      extracted/
+	cp ../../src/tactics/ml/FStar_Tactics_Native.ml extracted/
+	cp ../../src/tactics/ml/FStar_Tactics_Load.ml extracted/
 	$(FIND) . extracted -maxdepth 1 -name "*.ml" -printf '%f\n' \
 		| $(SED) -e 's/\.ml//g' -e 's/\./_/g' -e 's/\<./\u&/g' \
 		| sort | uniq > $@
+	echo 'FStar_Parser_LexFStar' >> $@
+	touch fstarlib.ml
 
 FSTARLIB_DIR=../../bin/fstarlib/
 
